--- a/Problem Set 3.qmd
+++ b/Problem Set 3.qmd
@@ -11,6 +11,8 @@ editor: visual
 library(knitr)
 library(haven)
 library(tidyverse)
+library(broom)
+library(pscl)
 ```
 
 ## Problem 1
@@ -66,10 +68,11 @@ tymp_demo <- tymp_demo_df %>%
                          levels = c(1, 2),
                          labels = c("U.S. citizen", "Not a citizen")),
     
-    annual_income = case_when(annual_income_code %in% c(12, 13, 77, 99) ~ NA,
-                              TRUE ~ annual_income_code),
+    annual_income_code = case_when(annual_income_code %in% c(12, 13) ~ NA,
+                                   annual_income_code %in% c(77, 99) ~ NA,
+                                   TRUE ~ annual_income_code),
     
-    annual_income = factor(annual_income, 
+    annual_income_range = factor(annual_income_code, 
                            ordered = TRUE, 
                            levels = c(1:10, 14, 15),
                            labels = c("$0–4,999", 
@@ -83,22 +86,27 @@ tymp_demo <- tymp_demo_df %>%
                                       "$55,000–64,999",
                                       "$65,000–74,999",
                                       "$75,000–99,999",
-                                      "≥$100,000"))
+                                      "Over $100,000"))
          )
 ```
 
 **Answer:**
 
-I selected and renamed the columns needed in this problem. Then I cleaned and labeled the variables based on the NHANES documentation.
+I selected and renamed the columns needed in this problem, then cleaned and labeled the variables based on the NHANES documentation.
 
-I converted `citizenship` into a factor and treated non-substantive responses as missing. Specifically, codes 7 = 'refused' and 9 = 'don’t know' were set to `NA`. Remaining codes were labeled 1 = U.S. citizen, 2 = Not a citizen.
+I converted `gender` to factor with 'Male' and 'Female' labels.
 
-The original `annual_income_code` is categorical and mixes detailed bins with two broad, overlapping buckets: 12 = “\$20,000 and over” and 13 = “under \$20,000.” Because 12 and 13 overlap the detailed ranges, they cannot be placed on the same ordered scale as 1–10, 14, 15. Also, 77 represents 'refused' and 99 represents 'don’t know' are nonresponses. Since codes 12 and 13 only contains 198 observations, to create a meaningful ordered factor, I set 12, 13, 77, 99 to `NA`, then labeled and ordered the remaining detailed bins from lowest to highest (I verified the ordering and counts with a frequency table to confirm the levels and the number of `NA`s introduced.)
+For `citizenship`, codes 7 = 'Refused' and 9 = 'Don’t know' were set to `NA`. Then I converted this variable into a factor with 1 = 'U.S. citizen', 2 = 'Not a citizen'.
 
-```{r}
-fre_table <- as.data.frame(table(tymp_demo$annual_income, useNA = "ifany"))
+The original `annual_income_code` is categorical; however, codes 12 = '\$20,000 and over' and 13 = 'Under \$20,000' overlap the detailed ranges, for which they cannot be placed on the same ordered scale as 1–10, 14, 15. Also, 77 = 'Refused' and 99 = 'Don’t know' are non-responses.
+
+So 12, 13, 77, 99 were all set to `NA` to create a meaningful ordered factor. Finally, the remaining detailed bins are labeled and ordered from lowest to highest (I verified the ordering and counts with a frequency table to confirm the levels and the number of `NA`s introduced.)
+
+```{r check_ordering}
+fre_table <- as.data.frame(table(tymp_demo$annual_income_range, 
+                                 useNA = "ifany"))
+
 names(fre_table) <- c("Income Range", "Count")
-                           
 kable(fre_table, caption = "Distribution of annual household income")
 ```
 
@@ -114,35 +122,81 @@ c\. The Tympanometric width measure is looks approximately like a **Poisson dist
 
 Produce a table presenting the **estimated incidence risk ratios for the coefficients** in each model, along with the **sample size** for the model, the **pseudo-**$R^2$**,** and **AIC** values. (This can be a single table, or one table for coefficients and a separate table for model statistics).
 
-```{r}
-mid_income_point <- c("1"=2500, 
-                      "2"=7500, 
-                      "3"=12500, 
-                      "4"=17500, 
-                      "5"=22500,
-                      "6"=30000, 
-                      "7"=40000, 
-                      "8"=50000, 
-                      "9"=60000, 
-                      "10"=70000,
-                      "14"=87500, 
-                      "15"=112500)
-
-tymp_demo_c <- tymp_demo %>%
-  mutate(income_cont = as.numeric(mid_income_point[as.character(annual_income_code)]))
-
-# Fit four Poisson regression
-m_1R <- glm(tymp_right ~ gender, data = tymp_demo_c, family = poisson)
-
-m_2R <- glm(tymp_right ~ gender + citizenship + num_children_5_younger + income_cont,
-            data = tymp_demo_c, family = poisson)
-
-m_1L <- glm(tymp_left  ~ gender, data = tymp_demo_c, family = poisson)
-
-m_2L <- glm(tymp_left  ~ gender + citizenship + num_children_5_younger + income_cont,
-            data = tymp_demo_c, family = poisson)
+```{r convert_income_continuous}
+tymp_demo <- tymp_demo %>% 
+  mutate(income_rank = as.integer(annual_income_range))
 ```
 
-Answer:
+```{r poisson_regression}
+m_1R <- glm(tymp_right ~ gender, data = tymp_demo, family = poisson)
+
+m_2R <- glm(tymp_right ~ gender + citizenship + 
+                         num_children_5_younger + income_rank,
+            data = tymp_demo, family = poisson)
+
+m_1L <- glm(tymp_left ~ gender, data = tymp_demo, family = poisson)
+
+m_2L <- glm(tymp_left ~ gender + citizenship + 
+                        num_children_5_younger + income_rank,
+            data = tymp_demo, family = poisson)
+```
+
+```{r incidence_risk_ratios}
+irr <- function(fit, model_name){
+  tidy(fit) %>% 
+    mutate(model = model_name,
+           IRR = exp(estimate)) %>% 
+    select(model, term, IRR)
+}
+
+rbind(irr(m_1R, "Model 1"), 
+      irr(m_2R, "Model 2"), 
+      irr(m_1L, "Model 3"), 
+      irr(m_2L, "Model 4")) %>% 
+  
+  filter(term != "(Intercept)") %>% 
+  
+  mutate(term = recode(
+    term,
+    "genderFemale" = "Gender: Female",
+    "citizenshipNot a citizen" = "Citizenship: Not a citizen",
+    "num_children_5_younger" = "Num of children 5 years or younger",
+    "income_rank" = "Income rank")) %>% 
+  
+  pivot_wider(names_from = model, values_from = IRR) %>% 
+  
+  mutate(across(-term, ~ round(.x, 4))) %>% 
+  
+  kable(caption = "Incidence Risk Ratios by Models", 
+        align = c("l","c","c","c","c"))
+
+```
+
+```{r statistics_glm}
+model_stats <- function(model) {
+  return(c(N = length(model$fitted.values),
+    R2 = pR2(model)["McFadden"],
+    AIC = AIC(model)))
+}
+
+stats_raw <- cbind(model_stats(m_1R),
+                   model_stats(m_2R),
+                   model_stats(m_1L),
+                   model_stats(m_2L))
+
+stats_table <- rbind(formatC(stats_raw[1, ], format = "d"),              
+                     formatC(stats_raw[2, ], format = "f", digits = 4),  
+                     formatC(stats_raw[3, ], format = "f", digits = 2))
+
+rownames(stats_table) <- c("Sample Size", "Pseudo R²", "AIC")
+colnames(stats_table) <- c("Model 1", "Model 2", "Model 3", "Model 4")
+
+kable(stats_table, caption = "Model Statistics")
+
+```
+
+Note:
+
+To treat annual household income as a continuous predictor, I treated the numeric labels of the groups as continuous, for which I converted the ordered income categories to numeric ranks from 1 (lowest) to 12 (highest), using `income_rank = as.integer(annual_income_range)`.
 
 d\. From model 2L, provide evidence whether there is a difference between males and females in terms of their incidence risk ratio. Test whether the predicted value of Tympanometric width measure of the left ear differs between men and women. Include the results of the each test and their interpretation.
