--- a/Problem Set 3.qmd
+++ b/Problem Set 3.qmd
@@ -19,7 +19,7 @@ library(RSQLite)
 library(microbenchmark)
 ```
 
-## Problem 1
+## Problem 1 NHANES
 
 a\. Download the file AUX_I from [this location](https://wwwn.cdc.gov/nchs/nhanes/search/datapage.aspx?Component=Examination&CycleBeginYear=2015), and determine how to **read it into R**. Then download the file DEMO_I from [this location](http://wwwn.cdc.gov/Nchs/Nhanes/Search/DataPage.aspx?Component=Demographics&CycleBeginYear=2015). Note that each page contains a link to a documentation file for that data set. **Merge the two** files to create a single `data.frame`. **Keep only records which matched**. Print out the **dimensions** of the merged `data.frame`.
 
@@ -146,11 +146,8 @@ m_2L <- glm(tymp_left ~ gender + citizenship +
 ```
 
 ```{r irr_fucntion}
-#' irr: compute the estimated incidence risk ratios for the coefficients
-#' 
-#' This function takes a fitted Poisson regression model and computes the 
-#' estimated incidence risk ratios for each coefficient and tags each row 
-#' with the model name provided.
+#' irr: Compute the estimated incidence risk ratios for the coefficients
+#' and tags each row with the model name provided.
 #'
 #' @param fit A fitted model object 
 #' @param model_name A character string giving a name or label for the model.
@@ -189,10 +186,8 @@ rbind(irr(m_1R, "Model 1"),
 ```
 
 ```{r model_stats_function}
-#' model_stats: compute key model statistics
-#' 
-#' Computes sample size (N), McFadden's pseudo-R², and AIC for a 
-#' fitted Poisson regression model
+#' model_stats: Computes sample size (N), McFadden's pseudo-R², 
+#' and AIC for a fitted Poisson regression model
 #' 
 #' @param model A fitted model object
 #' @return A named numeric vector with 3 elements
@@ -256,13 +251,12 @@ For each of the following questions, solve them in two ways:
 
 Compare each approach using microbenchmark.
 
-```{r}
+```{r SQL_connection}
 sakila <- dbConnect(RSQLite::SQLite(), "sakila_master.db")
-dbListTables(sakila)
 ```
 
-```{r}
-#' get_query: run a SQL query on the sakila database
+```{r get_query_function}
+#' get_query: Run a SQL query on the sakila database
 #' 
 #' @param query A character string containing a valid SQL query.
 #' @return A data frame with the result of the SQL query.
@@ -402,7 +396,8 @@ highest_rentals_r <- payment %>%
   left_join(film, by = "film_id") %>% 
   select(title, amount)
 
-kable(highest_rentals_r, caption = "Films rented for the highest dollar value (R version)")
+kable(highest_rentals_r, 
+      caption = "Films rented for the highest dollar value (R version)")
 ```
 
 ```{r sql_version_2c}
@@ -415,7 +410,8 @@ SELECT f.title,
        LEFT JOIN film AS f ON i.film_id = f.film_id
 WHERE p.amount = (SELECT MAX(amount) FROM payment)")
 
-kable(highest_rentals_sql, caption = "Films rented for the highest dollar value (SQL version)")
+kable(highest_rentals_sql, 
+      caption = "Films rented for the highest dollar value (SQL version)")
 ```
 
 ```{r time_comparison_2c}
@@ -451,3 +447,140 @@ microbenchmark(
 Answer:
 
 10 films were rented for the highest dollar value of \$11.99. SQL approach was substantially faster.
+
+## Problem 3 **Australian Records**
+
+Download the “Australia - 500 Records” data from <https://www.briandunning.com/sample-data/> and import it into R. This is entirely fake data; you can read the website for details. Use it to answer the following questions.
+
+```{r}
+dat <- read.csv("au-500.csv")
+```
+
+a\. What **percentage** of the websites are **.com**’s (as opposed to .net, .com.au, etc)?
+
+```{r}
+length(dat$email[grepl("\\.com$", dat$email)]) / nrow(dat)
+
+length(dat$web[grepl("\\.com$", dat$web)]) / nrow(dat)
+```
+
+Answer:
+
+The result is 0, none of the website URLs end with ".com".
+
+b\. What is the **most common domain name** amongst the email addresses? (“umich.edu” is the domain name in the email “statistics\@umich.edu”.)
+
+```{r}
+email_domains <- sub(".*@", "", dat$email)
+most_common <- sort(table(email_domains), decreasing = TRUE)
+head(most_common, 1)
+```
+
+Answer:
+
+The most common domain name is "hotmail.com".
+
+c\. What **proportion of company names** contain a **non-alphabetic character**, excluding **commas and white spaces**. (E.g. “Jane Doe, LLC” would *not* contain an eligible non-alphabetic character; “Plumber 247” would.) What about if you **also exclude ampersands** (“&”)?
+
+```{r}
+mean(grepl("[^A-Za-z ,]", dat$company_name)) *100
+```
+
+```{r}
+head(dat$company_name[grepl("[^A-Za-z ,]", dat$company_name)])
+```
+
+```{r}
+mean(grepl("[^A-Za-z ,&]", dat$company_name)) *100
+```
+
+```{r}
+dat$company_name[grepl("[^A-Za-z ,&]", dat$company_name)]
+```
+
+Answer:
+
+If only consider non-alphabetic character with the exclusion of commas and white spaces, 45 company names contain a non-alphabetic character, which is 9%.
+
+If we decide to exclude &, then only 4 comapny names contain a non-alphabetic character, which is only 0.8%.
+
+d\. In Australia, phone have 10 digits - but unlike in the US where we write all numbers as “123-456-7890”, they write land lines and cell phones differently:
+
+-   Landlines: 12-3456-7890
+
+-   Cell phones: 1234-567-890
+
+There are two different phones listed for each record. Make **all** phone numbers written like **cell phones**. Show it works by printing the first 10 phone numbers of each column.
+
+```{r cell_format_function}
+#' cell_format: Format phone numbers as Australian cell style 
+#' 
+#' @param phone Character vector of phone numbers in arbitrary formats
+#' (may include spaces, dashes, parentheses, etc.)
+#' @return A character vector the same length as `phone`, where each 
+#' element is either a formatted string `"dddd-ddd-ddd"` or `NA` if not 
+#' 10 digits.
+
+cell_format <- function(phone){
+  parts_list <- gsub("[^0-9]", "", phone)
+  ifelse(nchar(parts_list) == 10,
+         paste(substring(parts_list, 1, 4),
+               substring(parts_list, 5, 7),
+               substring(parts_list, 8,10),
+               sep = "-"),
+         NA)
+}
+```
+
+```{r}
+dat %>% 
+  mutate(cell_phone1 = cell_format(phone1),
+         cell_phone2 = cell_format(phone2)) %>% 
+  select(cell_phone1, cell_phone2) %>% 
+  head(10)
+```
+
+Answer:
+
+I used `gsub()` instead of `strsplit()` so that it can handle any formatting of the phone number.
+
+e\. Produce a histogram of the **log of the apartment numbers** for all addresses. (You may assume **any number** **at the end** of the an address is an **apartment number.**)
+
+```{r}
+has_apt_num <- dat$address[grepl("#[0-9]+$", dat$address)]
+apt_num <- sapply(strsplit(has_apt_num, " "), function(add) add[length(add)])
+apt_num <- as.numeric(sub("#", "", apt_num))
+hist(log(apt_num),
+     main = "Hostogram of apartment number on log scale")
+```
+
+```{r}
+setdiff(dat$address[grepl("[0-9]+$", dat$address)], 
+        dat$address[grepl("#[0-9]+$", dat$address)])
+```
+
+Note:
+
+We treat any trailing number in an address as an apartment number and extract it accordingly. While this heuristic works for entries like “534 Schoenborn St #51,” it can mislabel some edge cases where the final number is part of the street name rather than a unit, for example “79 State Route 35”. Indeed, there are 5 edge cases. Therefore, I restricted extraction to addresses that end with digits but also come with common apartment token "\#".
+
+f\. [Benford’s law](https://en.wikipedia.org/wiki/Benford's_law) is an observation about the distribution of the **leading digit** of real numerical data. Examine whether the apartment numbers appear to follow Benford’s law. Do you think the apartment numbers would pass as real data?
+
+```{r benford_law}
+tab <- table(substr(apt_num, 1, 1))
+digits <- as.integer(names(tab))
+count <- as.integer(tab)
+pro <- count / sum(count)
+
+benford <- log10(1 + 1/(1:9))
+
+data.frame(
+  digit = digits,
+  count = count,
+  prop  = round(prop, 4),
+  benford_prop = round(benford, 4)
+)
+```
+
+Answer:
+
+Comparing the actual proportions and the Benford’s expected proportions, we can see that apartment numbers do not follow Benford’s law.
